--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -49,7 +49,7 @@ jobs:
           cat node.log >> README.md
           echo '```' >> README.md
           echo '## deno' >> README.md
-          deno --version >> README.md
+          deno --version | perl -pe 's/\n/\n\n/' >> README.md
           echo '```bash' >> README.md
           echo '% deno run --allow-read --allow-write test.js > deno.log 2>&1' >> READMD.md
           cat deno.log >> README.md
